--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
       {% endif %}
     {% endwith %}
     <form action='/process' method='POST'>
-        Name:
-        <input type="text" name="name">
+        Email:
+        <input type="text" name="email">
         <input type="submit" value="Submit">
     </form>
 </body>
